components/input/style/mixin.less
/* ... */
.input-affix-wrapper(@inputClass) {
  position: relative;
  display: inline-block;
  width: 100%;
  text-align: start;

  &:hover .@{inputClass}:not(.@{inputClass}-disabled) {
    .hover();
  }

  .@{inputClass} {
    position: relative;
    text-align: inherit;
  }

  // Should not break align of icon & text
  // https://github.com/ant-design/ant-design/issues/18087
  // https://github.com/ant-design/ant-design/issues/17414
  // https://github.com/ant-design/ant-design/pull/17684
  // https://codesandbox.io/embed/pensive-paper-di2wk
  // https://codesandbox.io/embed/nifty-benz-gb7ml
  .@{inputClass}-prefix,
  .@{inputClass}-suffix {
    position: absolute;
    top: 50%;
    z-index: 2;
    display: flex;
    align-items: center;
    color: @input-color;
    line-height: 0;
    transform: translateY(-50%);

    :not(.anticon) {
      line-height: @line-height-base;
    }
  }

  .@{inputClass}-disabled ~ .@{inputClass}-suffix {
    .anticon {
      color: @disabled-color;
      cursor: not-allowed;
    }
  }

  .@{inputClass}-prefix {
    left: @input-padding-horizontal-base + 1px;

    .@{inputClass}-rtl & {
      right: @input-padding-horizontal-base + 1px;
      left: auto;
    }
  }

  .@{inputClass}-suffix {
    right: @input-padding-horizontal-base + 1px;

    .@{inputClass}-rtl & {
      right: auto;
      left: @input-padding-horizontal-base + 1px;
    }
  }

  .@{inputClass}:not(:first-child) {
    padding-left: @input-padding-horizontal-base + @input-affix-width;

    .@{inputClass}-rtl & {
      padding-right: @input-padding-horizontal-base + @input-affix-width;
      padding-left: @input-padding-horizontal-base;
    }
  }

  .@{inputClass}:not(:last-child) {
    padding-right: @input-padding-horizontal-base + @input-affix-width;

    .@{inputClass}-rtl & {
      padding-right: @input-padding-horizontal-base;
      padding-left: @input-padding-horizontal-base + @input-affix-width;
    }
  }

  // Needed to change priority of classes in rtl direction (last-child comes before first-child)
  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:last-child) {
    padding-right: @input-padding-horizontal-base;
    padding-left: @input-padding-horizontal-base + @input-affix-width;
  }

  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:first-child) {
    padding-right: @input-padding-horizontal-base + @input-affix-width;
    padding-left: @input-padding-horizontal-base;
  }

  // Needed to change priority of classes in rtl direction (last-child comes before first-child)
  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:last-child) {
    padding-right: @input-padding-horizontal-base;
    padding-left: @input-padding-horizontal-base + @input-affix-width;
  }

  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:first-child) {
    padding-right: @input-padding-horizontal-base + @input-affix-width;
    padding-left: @input-padding-horizontal-base;
  }

  // Needed to change priority of classes in rtl direction (last-child comes before first-child)
  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:last-child) {
    padding-right: @input-padding-horizontal-base;
    padding-left: @input-padding-horizontal-base + @input-affix-width;
  }

  .@{inputClass}-affix-wrapper-rtl& .@{inputClass}:not(:first-child) {
    padding-right: @input-padding-horizontal-base + @input-affix-width;
    padding-left: @input-padding-horizontal-base;
  }

  &.@{inputClass}-affix-wrapper-input-with-clear-btn .@{inputClass}:not(:last-child) {
    padding-right: @input-padding-horizontal-base + @input-affix-with-clear-btn-width;

    .@{inputClass}-rtl & {
      padding-right: @input-padding-horizontal-base;
      padding-left: @input-padding-horizontal-base + @input-affix-with-clear-btn-width;
    }
  }

  &.@{inputClass}-affix-wrapper-textarea-with-clear-btn .@{inputClass} {
    padding-right: 22px;
  }
}

.clear-icon() {
  color: @disabled-color;
  font-size: @font-size-sm;
  // https://github.com/ant-design/ant-design/pull/18151
  // https://codesandbox.io/s/wizardly-sun-u10br
  cursor: pointer;
  transition: color 0.3s;

  &:hover {
    color: @text-color-secondary;
  }

  &:active {
    color: @text-color;
  }

  + i {
    margin-left: 6px;
  }
}

